--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,7 @@
     list-style-type: none;
     display: inline-block;
     padding-left: 0;
+    
 }
 
 li{
@@ -30,3 +31,16 @@ li a{
     padding: 2px 5px;
 }
 
+li:last-child{
+    margin-right: 0;
+}
+
+li a.active{
+    background-color: #fff;
+    color: #000;
+}
+
+li a:hover{
+    background-color: #fff;
+    color: #000;
+}
