--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,5 @@
 .logo{
     width: 150px;
-    border: solid blue;
 }
 
 .headerbox{
@@ -8,10 +7,7 @@
     color: white;
     box-shadow: 0 4px 4px rgba(0,0,0,0.2);
     height: 75px;
-    content: "";
-    clear: both;
-    display: table;
-    border: solid red;
+    width: 100%;
 }
 
 
@@ -20,7 +16,6 @@
     list-style-type: none;
     display: inline-block;
     padding-left: 0;
-    border: solid red;
 }
 
 
@@ -33,7 +28,9 @@ li{
 
 li a{
     text-decoration: none;
-    width: 120px;
+    width: 150px;
+    height: 35px;
+    box-shadow: 0 4px 4px black;
     display: inline-block;
     text-align: center;
     color: #fff;
