--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,14 @@
 .logo{
-    width: 150px;
+    width: 135px;
 }
 
 .headerbox{
-    padding: 20px;
+    padding: 20px 50px 30px 15px;
     color: white;
     box-shadow: 0 4px 4px rgba(0,0,0,0.2);
     height: 75px;
     width: 100%;
 }
-
-
 
 .headerlist{
     list-style-type: none;
@@ -56,10 +54,28 @@ li a:hover{
     height: 550px;
     width: 100%;
     overflow: hidden;
+    position: relative;
+    text-align: center;
 }
 
 .hero{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.shopnowbutton{
+    background-color: lightblue;
+    height: 125px;
+    width: 200px;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    font-size: 2rem;
 }
