--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,9 +65,9 @@ li a:hover{
 }
 
 .shopnowbutton{
-    background-color: lightblue;
-    height: 125px;
-    width: 200px;
+    background-color: #10596A;
+    height: 60px;
+    width: 240px;
     color: white;
     padding: 10px 20px;
     border: none;
