--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,15 @@
 .logo{
-    width: 135px;
+    width: 90px;
 }
 
 .headerbox{
-    padding: 20px 50px 30px 15px;
+    padding: 30px 30px 30px 30px;
     color: white;
     box-shadow: 0 4px 4px rgba(0,0,0,0.2);
-    height: 75px;
+    height: 20px;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .headerlist{
@@ -17,7 +19,13 @@
     margin-left: 50px;
 }
 
-
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
 
 li{
     float: left;
