--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,11 @@ ul{
 li{
     float: left;
     margin-right: 10px;
-    background-color: #000;
+    text-decoration: none;
+    background-color: #10596A;
+    text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 li a{
