--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,14 +38,12 @@ li{
 }
 
 li a{
-    text-decoration: none;
-    width: 150px;
-    height: 35px;
-    box-shadow: 0 4px 4px black;
-    display: inline-block;
+    float: left;
+    color: #f2f2f2;
     text-align: center;
-    color: #fff;
-    padding: 2px 5px;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 1.2rem;
 }
 
 li:last-child{
