--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,15 +79,16 @@ li a:hover{
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 250px;
+    height: 420px;
 }
 
 h1{
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    font-size: 4rem;
 }
 
 .shopnowbutton{
@@ -99,9 +100,15 @@ h1{
     border: none;
     cursor: pointer;
     position: absolute;
-    top: 65%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     cursor: pointer;
     font-size: 2rem;
+    border-radius: 15px;
+}
+
+.shopnowbutton:hover{
+    background-color: white;
+    color: #10596A;
 }
