--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,73 +7,72 @@
 
 body{font-family: 'poppinsregular';}
 
-
-
-.logo{
-    width: 120px;
-}
-
-.headerbox{
-    padding: 30px 30px 30px 30px;
-    color: white;
-    box-shadow: 0 4px 4px rgba(0,0,0,0.2);
-    height: 20px;
-    width: 100%;
+header {
     display: flex;
-    align-items: center;
-    z-index: 1;
+    flex-wrap: wrap;
 }
 
-.headerlist{
-    list-style-type: none;
+#logo-container{
+    height: 64px;
+    width: 64px;
+    position: absolute;
+}
+
+#menu-container {
+    flex-grow: 1;
+}
+
+div#logo img{
+    width: 125px;
+}
+
+
+nav{
+    display: none;
+}
+
+input#hamburger-menu {
+    display: none;
+}
+
+input#hamburger-menu:checked ~ nav{
+    display: block;
+}
+
+label[for=hamburger-menu] {
     display: inline-block;
-    padding-left: 0;
-    margin-left: 50px;
+    width: 100%;
+    margin: 16px 0;
+    font-size: 2em;
+    text-align: right;
 }
-
-ul{
-    list-style: none;
-    padding: 0;
+ 
+nav > ul {
+    list-style-type: none;
     margin: 0;
+    padding: 0;
     display: flex;
-    align-items: center;
+    flex-direction: column;
 }
 
-li{
-    float: left;
-    margin-right: 20px;
+nav > ul > li > a {
+    display: inline-block;
     text-decoration: none;
-    background-color: #10596A;
-    text-align: center;
-    display: flex;
-    align-items: center;
-}
-
-li a{
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
     padding: 4px 10px;
-    text-decoration: none;
-    font-size: 1.2rem;
+    border: 1px solid black;
+    background-color: black;
+    color: white;
+    text-align: center;
+    width: 100%;
+    margin: 3px 0;
 }
 
-li:last-child{
-    margin-right: 0;
-}
 
-li a.active{
-    background-color: #fff;
-    color: #000;
-}
 
-li a:hover{
-    background-color: #fff;
-    color: #10596A;
-}
 
 .heropicture{
     height: 550px;
+    margin-top: 6px;
     width: 100%;
     overflow: hidden;
     position: relative;
