--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,14 +5,26 @@
     font-style: normal;
 }
 
-body{font-family: 'poppinsregular';}
+body{font-family: 'poppinsregular';
+    margin: 0;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 100%;
+}
+
+a{
+    text-decoration: none;
+}
+
+/*Header*/
 
 header {
     display: flex;
     flex-wrap: wrap;
     background-color: whitesmoke;
     padding: 15px 15px 15px 15px;
-    box-shadow: 0 3px 3px 0 black;
+    box-shadow: 0 4px 4px 0 black;
     z-index: 1;
 }
 
@@ -100,6 +112,8 @@ nav > ul > li > a {
     }
 
 }
+
+/*Main*/
 
 .heropicture{
     text-align: center;
@@ -209,6 +223,8 @@ h1{
 
 }
 
+/*Contactsheet*/
+
 .contactsheet{
     width: 100%;
     height: 100vh;
@@ -269,4 +285,58 @@ textarea:focus~label,
 textarea:valid~label{
     top: -35px;
     font-size: 14px;
+}
+
+
+/*Jacket Cards*/
+
+.jacket-container{
+    display: flex;
+    flex-direction: column;
+    background-color: #D9D9D9;
+    border: solid black;
+    height: auto;
+    width: 300px;
+    border-radius: 20px;
+}
+
+.jacket-container > img{
+    width: auto;
+}
+
+.jacket-container > p{
+    text-decoration: none;
+    color: black; 
+    text-align: center;
+}
+
+.color-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 200px;
+    margin: 10px;
+    align-self: center;
+}
+
+.color-container > div{
+    width: 50px;
+    height: 50px;
+    background-color: #10596A;
+    border-radius: 50%;
+}
+
+.color-container > div:hover{
+    border: solid black;
+    box-sizing: border-box;
+}
+
+
+
+
+/*Footer*/
+
+footer{
+    height: 250px; 
+    background-color: black;
 }
