--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ header {
     flex-wrap: wrap;
     background-color: whitesmoke;
     padding: 15px 15px 15px 15px;
-    box-shadow: 0 4px 4px 0 black;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 
@@ -294,9 +294,9 @@ textarea:valid~label{
     display: flex;
     flex-direction: column;
     background-color: #D9D9D9;
-    border: solid black;
     height: auto;
     width: 300px;
+    padding: 20px;
     border-radius: 20px;
 }
 
@@ -307,7 +307,8 @@ textarea:valid~label{
 .jacket-container > p{
     text-decoration: none;
     color: black; 
-    text-align: center;
+    text-align: left;
+    margin: 5px 0 5px 10px;
 }
 
 .color-container{
@@ -316,7 +317,7 @@ textarea:valid~label{
     justify-content: space-between;
     width: 200px;
     margin: 10px;
-    align-self: center;
+    align-self: left;
 }
 
 .color-container > div{
