--- a/stylesheet.css
+++ b/stylesheet.css
@@ -149,23 +149,34 @@ h1{
     text-overflow: ellipsis;
 }
 
+.button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+}
+
 .shopnowbutton{
     background-color: #10596A;
-    height: 50px;
-    width: 130px;
     color: white;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    position: absolute;
-    justify-content: center;
-    text-align: center;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     cursor: pointer;
     font-size: 1.3rem;
     white-space: nowrap;
+    transform: scale(0.7);
+    width: 150px;
+}
+
+.shoptext{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .shopnowbutton:hover{
@@ -208,20 +219,28 @@ h1{
     font-size: 4rem;
 }
 
+.button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+}
+
 .shopnowbutton{
     background-color: #10596A;
-    height: 60px;
-    width: 240px;
     color: white;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 1.3rem;
+    white-space: nowrap;
+    transform: scale(1.5);
+    width: 150px;
 }
 
 }
@@ -293,6 +312,13 @@ textarea:valid~label{
 
 /*Jacket Cards*/
 
+.jacket-container-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25px 0 25px 0;
+}
+
 .jacket-container{
     display: flex;
     flex-direction: column;
@@ -301,7 +327,7 @@ textarea:valid~label{
     width: 300px;
     padding: 20px;
     border-radius: 20px;
-    border: solid black;
+    margin-right: 0;
 }
 
 .jacket-container > img{
