--- a/stylesheet.css
+++ b/stylesheet.css
@@ -323,7 +323,7 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 25px 0 25px 0;
+    margin: 0 25% 0 25%;
 }
 
 .jacket-container{
