--- a/stylesheet.css
+++ b/stylesheet.css
@@ -169,7 +169,7 @@ h1{
     cursor: pointer;
     font-size: 1.3rem;
     white-space: nowrap;
-    transform: scale(0.7);
+    transform: scale(1);
     width: 150px;
 }
 
@@ -327,7 +327,7 @@ h2{
     flex-direction: column;
     background-color: #D9D9D9;
     height: auto;
-    margin: 25px 0 25px 0;
+    margin: 25px auto;
     width: 300px;
     padding: 20px;
     border-radius: 20px;
@@ -371,7 +371,9 @@ h2{
 }
 
 @media (min-width: 556px){
-
+    .jackets{
+        display: flex;
+        flex-direction: row;
     }
 }
 
