--- a/stylesheet.css
+++ b/stylesheet.css
@@ -372,15 +372,24 @@ h2{
 
 @media (min-width: 556px){
     .jackets{
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        /*flex-direction: column;
+        align-items: center;
         justify-content: space-between;
-        flex-wrap: wrap;
+        flex-wrap: wrap;*/
+    }
+
+    .jackets > .jacket-container{
+        display: grid;
+        grid-template-columns:  auto auto;
+        grid-template-rows: auto auto;
+        width: 300px;
+        gap: 20px;
     }
 
     .jacket-container{
-            flex-basis: calc(33.33% - 5px);
-        margin: 50px;
+        margin: 25px;
     }
 }
 
