--- a/stylesheet.css
+++ b/stylesheet.css
@@ -370,19 +370,15 @@ h2{
     box-sizing: border-box;
 }
 
-@media (min-width: 556px){
+@media (min-width: 576px){
     .jackets{
         display: grid;
-        grid-template-columns: auto auto auto;
-        /*flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        flex-wrap: wrap;*/
+        grid-template-columns: auto auto auto auto;
     }
 
     .jackets > .jacket-container{
         display: grid;
-        grid-template-columns:  auto auto;
+        grid-template-columns:  auto auto ;
         grid-template-rows: auto auto;
         width: 300px;
         gap: 20px;
@@ -398,5 +394,27 @@ h2{
 
 footer{
     height: 250px; 
-    background-color: black;
+    background-color: #D9D9D9;
+}
+
+footer > ul > h3{
+    color: black;
+    text-align: left;
+}
+
+footer > ul> li > a{
+    text-decoration: none;
+    color: white;
+    background-color: #10596A; 
+    padding: 5px;
+}
+
+footer > ul > li > a:hover{
+    color: #10596A;
+    background-color: white;
+}
+
+footer > ul > li{
+    margin: 0 0 15px 0;
+    list-style: none;
 }
