--- a/stylesheet.css
+++ b/stylesheet.css
@@ -393,8 +393,6 @@ h2{
 /*Footer*/
 
 footer{
-    display: flex;
-    justify-content: center;
     margin-top: 25px;
     height: 250px; 
     background-color: #D9D9D9;
@@ -423,11 +421,29 @@ footer > ul > li > a:hover{
     list-style: none;
 }
 
-.footer-other{
-    text-align: right;
+/*.footer-nav{
+    
 }
+
+.footer-other{
+    
+}*/
 
 .footer-other > li{
     margin: 0 0 15px 0;
     list-style: none;
+}
+
+.footer-other > li > a{
+    text-decoration: none;
+    color: white;
+    background-color: #10596A;
+    padding: 5px;
+}
+
+
+
+footer > a > img{
+    width: 50px;
+    height: auto;
 }
