--- a/stylesheet.css
+++ b/stylesheet.css
@@ -447,3 +447,28 @@ footer > a > img{
     width: 50px;
     height: auto;
 }
+
+/*Crumbs*/
+
+.crumbs{
+    display: inline-block;
+    margin-left: 15px;
+}
+
+nav.crumbs ol{
+    list-style-type: none;
+    padding-left: 0;
+}
+
+li.crumb{
+    display: inline-block;
+}
+
+li.crumb a::after{
+    display: inline-block;
+    color: #000;
+    content: '>';
+    font-size: 0.8em;
+    font-weight: bold;
+    padding: 0 1px 0 7px;
+}
