--- a/stylesheet.css
+++ b/stylesheet.css
@@ -392,49 +392,62 @@ h2{
 
 /*Footer*/
 
+.footerlist-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin: 0 15px 0 15px;
+}
+
 footer{
     margin-top: 25px;
     height: 250px; 
     background-color: #D9D9D9;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.footer-nav > ul > h3{
+.footer-left{
+    margin: 0;
+    padding: 0;
+}
+
+.footer-right{
+    margin: 0;
+    padding: 0;
+    text-align: right;
+}
+
+.footer-left > ul > h3{
     color: black;
     text-align: left;
 }
 
 
-.footer-nav > li > a{
+.footer-left > li > a{
     text-decoration: none;
     color: white;
     background-color: #10596A; 
     padding: 5px;
 }
 
-footer > ul > li > a:hover{
+footer > .footerlist-container > ul > li > a:hover{
+    cursor: pointer;
     color: #10596A;
     background-color: white;
 }
 
-.footer-nav > li{
+.footer-left > li{
+    margin: 0 0 15px 0;
+    list-style: none;
+}
+.footer-right > li{
     margin: 0 0 15px 0;
     list-style: none;
 }
 
-/*.footer-nav{
-    
-}
-
-.footer-other{
-    
-}*/
-
-.footer-other > li{
-    margin: 0 0 15px 0;
-    list-style: none;
-}
-
-.footer-other > li > a{
+.footer-right > li > a{
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
     color: white;
     background-color: #10596A;
@@ -443,7 +456,8 @@ footer > ul > li > a:hover{
 
 
 
-footer > a > img{
+footer > .footerlist-container > a > img{
+    align-items: center;
     width: 50px;
     height: auto;
 }
@@ -471,4 +485,28 @@ li.crumb a::after{
     font-size: 0.8em;
     font-weight: bold;
     padding: 0 1px 0 7px;
+}
+
+/*About us*/
+
+.about-text{
+    margin: 50px;
+    text-align: center;
+    font-size: 1em;
+}
+
+
+
+@media (min-width: 756px){
+    .about-text{
+        margin: 50px 150px 50px 150px;
+        font-size: 1cem;
+    }
+}
+
+@media (min-width: 1200px){
+    .about-text{
+        margin: 50px 250px 50px 250px;
+        font-size: 1.5em;
+    }
 }
