--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,6 +87,12 @@ nav > ul > li > a {
     margin: 3px 0;
 }
 
+.fa-cart-shopping{
+    color: black;
+    font-size: 2rem;
+    margin-right: 15px;
+}
+
 @media (min-width: 890px){
 
     label[for=hamburger-menu] {
