--- a/stylesheet.css
+++ b/stylesheet.css
@@ -554,7 +554,7 @@ footer > div > h2{
 }
 
 footer form input{
-    width: 350px;
+    width: 200px;
     height: 20px;
     text-align: center;
     margin: 20px 0 20px 0;
@@ -569,7 +569,7 @@ footer form button{
     color: #fff;
     padding: 10px 30px;
     font-size: 15px;
-    width: 370px;
+    width: 220px;
     height: 40px;
 }
 
@@ -586,6 +586,14 @@ footer form button{
     footer > div{
         text-align: center;
         margin: 50px;
+    }
+
+    footer form input{
+        width: 350px;
+    }
+
+    footer form button{
+        width: 370px;
     }
 }
 
@@ -641,3 +649,73 @@ li.crumb a::after{
         font-size: 1.5em;
     }
 }
+
+/********************
+Jacket specific
+********************/
+
+hr{
+    height: 2px;
+    background: black;  
+}
+
+.clothes-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #D9D9D9;
+    width: 90%;
+    margin: 15px;
+    border-radius: 25px;
+}
+
+.clothes-container > img{
+    display: flex;
+    width: 300px;
+    margin: 30px;
+    height: 300px;
+}
+
+.size-container{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    width: 30px;
+    gap: 30px;
+}
+
+.clothes-container > .color-container{
+    display: flex;
+    justify-content: start;
+    width: 100%;
+    padding-left: 20px;
+}
+
+.clothes-container > .color-container > div{
+    margin: 10px;
+}
+
+.clothes-container > .size-container{
+    display: flex;
+    width: 100%;
+    justify-content: start;
+    padding-left: 20px;
+    font-size: 20px;
+}
+
+.clothes-container > p{
+    padding: 20px;
+}
+
+.clothes-container > a{
+    display: flex;
+    background-color: #10596A;
+    color: white;
+    width: 250px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+
+}
+
